--- a/ethical_guardrails.ipynb
+++ b/ethical_guardrails.ipynb
@@ -317,7 +317,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "91fcbc30-82d5-4a62-99ef-370952ef7869",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
