--- a/ethical_guardrails.ipynb
+++ b/ethical_guardrails.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Libraries Imported succesfully on 2025-04-27 at 01:45:37.876522\n"
+      "Libraries Imported succesfully on 2025-04-27 at 01:47:54.410124\n"
      ]
     }
    ],
@@ -283,110 +283,54 @@
    "execution_count": 8,
    "id": "4248fe21-3fae-4bbb-914d-d35b489b9ea0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "\n",
-       "## 20 Helpful Emogis \n",
-       "\n",
-       "✅ — Green Check Mark (Success, Completed)\n",
-       "\n",
-       "❌ — Red Cross Mark (Error, Rejected)\n",
-       "\n",
-       "⚠️ — Yellow Warning Sign (Caution, Attention)\n",
-       "\n",
-       "ℹ️ — Information Symbol (Info, Details)\n",
-       "\n",
-       "❓ — Red Question Mark (Uncertainty, Ask)\n",
-       "\n",
-       "❗ — Red Exclamation Mark (Urgent, Important)\n",
-       "\n",
-       "🔥 — Fire (Hot, Trending, Urgent)\n",
-       "\n",
-       "🚀 — Rocket (Launch, Progress, Growth)\n",
-       "\n",
-       "🛑 — Stop Sign (Halt, Critical Stop)\n",
-       "\n",
-       "🏁 — Checkered Flag (Finished, Complete)\n",
-       "\n",
-       "🔔 — Bell (Reminder, Notification)\n",
-       "\n",
-       "📢 — Loudspeaker (Announcement, Public Message)\n",
-       "\n",
-       "🧹 — Broom (Clean up, Reset, Clear)\n",
-       "\n",
-       "💬 — Speech Balloon (Comment, Feedback)\n",
-       "\n",
-       "📈 — Upward Graph (Growth, Improvement)\n",
-       "\n",
-       "📉 — Downward Graph (Decline, Caution)\n",
-       "\n",
-       "🔒 — Locked Padlock (Secure, Restricted)\n",
-       "\n",
-       "🧠 — Brain (Idea, Thinking, Intelligence)\n",
-       "\n",
-       "🕒 — Clock (Time, Deadline)\n",
-       "\n",
-       "🗂️ — Card Index Dividers (Organized, Sorted)\n",
-       "\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "definition ='''\n",
+    "# definition ='''\n",
     "\n",
-    "## 20 Helpful Emogis \n",
+    "# ## 20 Helpful Emogis \n",
     "\n",
-    "✅ — Green Check Mark (Success, Completed)\n",
+    "# ✅ — Green Check Mark (Success, Completed)\n",
     "\n",
-    "❌ — Red Cross Mark (Error, Rejected)\n",
+    "# ❌ — Red Cross Mark (Error, Rejected)\n",
     "\n",
-    "⚠️ — Yellow Warning Sign (Caution, Attention)\n",
+    "# ⚠️ — Yellow Warning Sign (Caution, Attention)\n",
     "\n",
-    "ℹ️ — Information Symbol (Info, Details)\n",
+    "# ℹ️ — Information Symbol (Info, Details)\n",
     "\n",
-    "❓ — Red Question Mark (Uncertainty, Ask)\n",
+    "# ❓ — Red Question Mark (Uncertainty, Ask)\n",
     "\n",
-    "❗ — Red Exclamation Mark (Urgent, Important)\n",
+    "# ❗ — Red Exclamation Mark (Urgent, Important)\n",
     "\n",
-    "🔥 — Fire (Hot, Trending, Urgent)\n",
+    "# 🔥 — Fire (Hot, Trending, Urgent)\n",
     "\n",
-    "🚀 — Rocket (Launch, Progress, Growth)\n",
+    "# 🚀 — Rocket (Launch, Progress, Growth)\n",
     "\n",
-    "🛑 — Stop Sign (Halt, Critical Stop)\n",
+    "# 🛑 — Stop Sign (Halt, Critical Stop)\n",
     "\n",
-    "🏁 — Checkered Flag (Finished, Complete)\n",
+    "# 🏁 — Checkered Flag (Finished, Complete)\n",
     "\n",
-    "🔔 — Bell (Reminder, Notification)\n",
+    "# 🔔 — Bell (Reminder, Notification)\n",
     "\n",
-    "📢 — Loudspeaker (Announcement, Public Message)\n",
+    "# 📢 — Loudspeaker (Announcement, Public Message)\n",
     "\n",
-    "🧹 — Broom (Clean up, Reset, Clear)\n",
+    "# 🧹 — Broom (Clean up, Reset, Clear)\n",
     "\n",
-    "💬 — Speech Balloon (Comment, Feedback)\n",
+    "# 💬 — Speech Balloon (Comment, Feedback)\n",
     "\n",
-    "📈 — Upward Graph (Growth, Improvement)\n",
+    "# 📈 — Upward Graph (Growth, Improvement)\n",
     "\n",
-    "📉 — Downward Graph (Decline, Caution)\n",
+    "# 📉 — Downward Graph (Decline, Caution)\n",
     "\n",
-    "🔒 — Locked Padlock (Secure, Restricted)\n",
+    "# 🔒 — Locked Padlock (Secure, Restricted)\n",
     "\n",
-    "🧠 — Brain (Idea, Thinking, Intelligence)\n",
+    "# 🧠 — Brain (Idea, Thinking, Intelligence)\n",
     "\n",
-    "🕒 — Clock (Time, Deadline)\n",
+    "# 🕒 — Clock (Time, Deadline)\n",
     "\n",
-    "🗂️ — Card Index Dividers (Organized, Sorted)\n",
+    "# 🗂️ — Card Index Dividers (Organized, Sorted)\n",
     "\n",
-    "'''\n",
-    "sb.outmd(definition)"
+    "# '''\n",
+    "# sb.outmd(definition)"
    ]
   },
   {
@@ -979,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "30a371b8-27c2-4e84-8dc3-7fef82b3cea4",
    "metadata": {},
    "outputs": [
@@ -1019,13 +963,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "ae467ea5-793d-477c-8d71-aad84ed23edf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample question that may ask for PHI\n",
-    "sample_question = \"What is the patient's date of birth and full name?\"\n",
+    "sample_question = \"What is the patients date of birth and full name?\"\n",
     "\n",
     "# Analyze the text\n",
     "results = analyzer.analyze(text=sample_question,\n",
@@ -1067,68 +1011,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-04-27 01:45:37,909 - INFO - START ethical_guardrails =============================================\n",
-      "2025-04-27 01:45:37,909 - INFO - START ethical_guardrails Start Time = 2025-04-27 01:45:37\n",
-      "2025-04-27 01:45:37,910 - INFO - ethical_guardrails Step 0 - Initialize the configuration file parser\n",
-      "2025-04-27 01:45:37,910 - INFO - Process ethical_guardrails Step 0 - Initializing and starting Logging Process.\n",
-      "2025-04-27 01:45:44,001 - INFO - nlp_engine not provided, creating default.\n",
-      "2025-04-27 01:45:46,100 - INFO - Created NLP engine: spacy. Loaded models: ['en']\n",
-      "2025-04-27 01:45:46,100 - INFO - registry not provided, creating default.\n",
-      "2025-04-27 01:45:46,122 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-27 01:45:46,122 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-27 01:45:46,122 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-27 01:45:46,122 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: UsBankRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: UsLicenseRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: UsItinRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: UsPassportRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: UsSsnRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: NhsRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: UkNinoRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: SgFinRecognizer\n",
-      "2025-04-27 01:45:46,123 - INFO - Loaded recognizer: AuAbnRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: AuAcnRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: AuTfnRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: AuMedicareRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: InPanRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: InAadhaarRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: InVehicleRegistrationRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: InPassportRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: EsNifRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: EsNieRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: ItDriverLicenseRecognizer\n",
-      "2025-04-27 01:45:46,124 - INFO - Loaded recognizer: ItFiscalCodeRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: ItVatCodeRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: ItIdentityCardRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: ItPassportRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: PlPeselRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: CryptoRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: DateRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: EmailRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: IbanRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: IpRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: MedicalLicenseRecognizer\n",
-      "2025-04-27 01:45:46,125 - INFO - Loaded recognizer: PhoneRecognizer\n",
-      "2025-04-27 01:45:46,126 - INFO - Loaded recognizer: UrlRecognizer\n",
-      "2025-04-27 01:45:46,126 - INFO - Loaded recognizer: InVoterRecognizer\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: es, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: pl, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNifRecognizer supported languages: es, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNieRecognizer supported languages: es, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - ItDriverLicenseRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - ItFiscalCodeRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - ItVatCodeRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - ItIdentityCardRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - ItPassportRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - WARNING - Recognizer not added to registry because language is not supported by registry - PlPeselRecognizer supported languages: pl, registry supported languages: en\n",
-      "2025-04-27 01:45:46,126 - INFO - Loaded recognizer: SpacyRecognizer\n",
-      "2025-04-27 01:45:46,138 - INFO - Fetching all recognizers for language en\n",
-      "2025-04-27 01:45:46,318 - INFO - PERFORMANCE ethical_guardrails The total process duration was:8.41\n",
-      "2025-04-27 01:45:46,318 - INFO - PERFORMANCE ethical_guardrails Stop Time = 2025-04-27 01:45:46\n",
-      "2025-04-27 01:45:46,323 - INFO - PERFORMANCE ethical_guardrails Low process duration less than 3 minutes:8.41\n",
-      "2025-04-27 01:45:46,323 - INFO - PERFORMANCE ethical_guardrails Performance optimization is optional\n",
-      "2025-04-27 01:45:46,323 - INFO - END ethical_guardrails =============================================\n",
+      "2025-04-27 01:47:54,438 - INFO - START ethical_guardrails =============================================\n",
+      "2025-04-27 01:47:54,438 - INFO - START ethical_guardrails Start Time = 2025-04-27 01:47:54\n",
+      "2025-04-27 01:47:54,438 - INFO - ethical_guardrails Step 0 - Initialize the configuration file parser\n",
+      "2025-04-27 01:47:54,438 - INFO - Process ethical_guardrails Step 0 - Initializing and starting Logging Process.\n",
+      "2025-04-27 01:48:00,573 - INFO - nlp_engine not provided, creating default.\n",
+      "2025-04-27 01:48:02,747 - INFO - Created NLP engine: spacy. Loaded models: ['en']\n",
+      "2025-04-27 01:48:02,747 - INFO - registry not provided, creating default.\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: UsBankRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: UsLicenseRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: UsItinRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: UsPassportRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: UsSsnRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: NhsRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: UkNinoRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: SgFinRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: AuAbnRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: AuAcnRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: AuTfnRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: AuMedicareRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: InPanRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: InAadhaarRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: InVehicleRegistrationRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: InPassportRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: EsNifRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: EsNieRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: ItDriverLicenseRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: ItFiscalCodeRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: ItVatCodeRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: ItIdentityCardRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: ItPassportRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: PlPeselRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: CryptoRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: DateRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: EmailRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: IbanRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: IpRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: MedicalLicenseRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: PhoneRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: UrlRecognizer\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: InVoterRecognizer\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: es, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: pl, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNifRecognizer supported languages: es, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNieRecognizer supported languages: es, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - ItDriverLicenseRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - ItFiscalCodeRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - ItVatCodeRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - ItIdentityCardRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - ItPassportRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - WARNING - Recognizer not added to registry because language is not supported by registry - PlPeselRecognizer supported languages: pl, registry supported languages: en\n",
+      "2025-04-27 01:48:02,763 - INFO - Loaded recognizer: SpacyRecognizer\n",
+      "2025-04-27 01:48:02,782 - INFO - Fetching all recognizers for language en\n",
+      "2025-04-27 01:48:02,984 - INFO - PERFORMANCE ethical_guardrails The total process duration was:8.55\n",
+      "2025-04-27 01:48:02,984 - INFO - PERFORMANCE ethical_guardrails Stop Time = 2025-04-27 01:48:02\n",
+      "2025-04-27 01:48:02,985 - INFO - PERFORMANCE ethical_guardrails Low process duration less than 3 minutes:8.55\n",
+      "2025-04-27 01:48:02,985 - INFO - PERFORMANCE ethical_guardrails Performance optimization is optional\n",
+      "2025-04-27 01:48:02,985 - INFO - END ethical_guardrails =============================================\n",
       "\n"
      ]
     }
